erDiagram
    users {
        UUID id PK
        VARCHAR full_name
        VARCHAR email UK
        VARCHAR wallet_address
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    badge_categories {
        UUID id PK
        VARCHAR name
        TEXT description
        TIMESTAMP created_at
    }

    badges {
        UUID id PK
        UUID category_id FK
        VARCHAR name
        TEXT description
        BYTEA image
        INTEGER badge_type
        INTEGER contract_token_id
        TEXT metadata_uri
        TIMESTAMP created_at
    }

    badge_issuances {
        UUID id PK
        UUID badge_id FK
        UUID user_id FK
        UUID issued_by FK
        TEXT metadata_uri
        INTEGER status
        VARCHAR wallet_address
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    badge_notifications {
        UUID id PK
        UUID issuance_id FK
        BOOLEAN is_read
        TIMESTAMP appeared_at
    }

    claim_intents {
        UUID id PK
        UUID issuance_id FK
        INTEGER status
        VARCHAR wallet_address
        TIMESTAMP submitted_at
        TIMESTAMP admin_response_at
    }

    badge_logs {
        UUID id PK
        INTEGER action_type
        VARCHAR entity_type
        UUID badge_id FK
        UUID category_id FK
        UUID issuance_id FK
        UUID user_id FK
        UUID claim_id FK
        UUID performed_by FK
        VARCHAR blockchain_tx_signature
        VARCHAR wallet_address
        TEXT old_value
        TEXT new_value
        INTEGER status
        TEXT error_message
        TIMESTAMP created_at
    }

    email_logs {
        UUID id PK
        UUID issuance_id FK
        INTEGER notification_type
        VARCHAR mail_provider_id
        VARCHAR status
        JSONB metadata
        TIMESTAMP created_at
    }

    %% Relationships
    badge_categories ||--o{ badges : "has"
    badges ||--o{ badge_issuances : "issued_as"
    users ||--o{ badge_issuances : "receives"
    users ||--o{ badge_issuances : "issues"
    badge_issuances ||--o{ badge_notifications : "triggers"
    badge_issuances ||--o{ claim_intents : "claimed_via"
    badge_issuances ||--o{ email_logs : "notified_via"
    users ||--o{ badge_logs : "performed_by"
    badges ||--o{ badge_logs : "logged"
    badge_categories ||--o{ badge_logs : "logged"
    badge_issuances ||--o{ badge_logs : "logged"
    users ||--o{ badge_logs : "logged"
    claim_intents ||--o{ badge_logs : "logged"

